# maxreplica-chatbot

./: README.md  pyproject.toml
config/: config.yml
data/: sample.txt  yohana.txt
data/processed/: processed_sample.txt  processed_yohana.txt
genai/: .env  preprocess.py  telebot.py
src/: modelutils.py  telebot.py
